@@ -26,14 +26,15 @@ for my $run (keys %runs) {
     system("perl -Mblib -MDevel::NYTProf demo/demo-code.pl @ARGV") == 0
         or exit 0;
 
-    system("rm -rf demo/profiler-$run") == 0
-        or exit 0;
-    system("perl -Mblib bin/nytprofhtml -out=demo/profiler-$run") == 0
+    my $outdir = "demo-out/profiler-$run";
+    system("rm -rf $outdir") == 0 or exit 0;
+    system("mkdir -p $outdir") == 0 or exit 0;
+    system("perl -Mblib bin/nytprofhtml -out=$outdir") == 0
         or exit 0;
 
-    system "open demo/profiler-$run/index.html"
+    system "open $outdir/index.html"
         if $^O eq 'darwin';
-    system "ls -lrt demo/profiler-$run/.";
+    system "ls -lrt $outdir/.";
 
     sleep 1;
 }
